--- a/project/html/activities html/act-2024.html
+++ b/project/html/activities html/act-2024.html
@@ -181,43 +181,47 @@
 						وفريقه على الشراكة.
 					</p>
 					<img
-						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/450227397_7709098372551651_8122793668420074327_n.jpg?stp=dst-jpg_p180x540&_nc_cat=107&ccb=1-7&_nc_sid=833d8c&_nc_ohc=AWTUPIxw2YgQ7kNvgGxsqjS&_nc_ht=scontent.ftun8-1.fna&oh=00_AYAix9bypkpkpwCXaLSUOSOjKlspekflYIe5l16Il8y19w&oe=66C40971"
-						alt="" />
+						src="/project/res/activiries imgs/2024 imgs/head01.jpg"
+						alt="image.png" />
 				</header>
 
 				<hr />
 
 				<figure>
 					<img
-						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/452396256_7795379520590202_7853537855642882856_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=833d8c&_nc_ohc=EWQ-1UThYj8Q7kNvgE_Uu8b&_nc_ht=scontent.ftun8-1.fna&oh=00_AYAFag115j2nRSwEuWXXHr8Y1t_ehVeZLarEfv29tz4x_g&oe=66C3DBE6"
+						src="/project/res/activiries imgs/2024 imgs/img00.jpg"
+						alt="image.png"
+						title="Les Urgences Estivales" />
+
+					<img
+						src="/project/res/activiries imgs/2024 imgs/img01.jpg"
+						alt="image.png"
+						title="Les Urgences Estivales" />
+
+					<img
+						src="/project/res/activiries imgs/2024 imgs/img02.jpg"
+						alt="image.png"
+						title="Les Urgences Estivales" />
+
+					<img
+						src="/project/res/activiries imgs/2024 imgs/img03.jpg"
+						alt="image.png"
+						title="Les Urgences Estivales" />
+
+					<img
+						src="/project/res/activiries imgs/2024 imgs/img04.jpg"
 						alt="image.png"
 						title="Les Urgences Estivales" />
 					<img
-						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/452387901_7795379833923504_1500319073421026269_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=833d8c&_nc_ohc=6SPH_X-zYfoQ7kNvgHWYUu9&_nc_ht=scontent.ftun8-1.fna&oh=00_AYABoJX-fBTmJURWzkTdYha5XHgPuMk7o1XVG6nu2vVrtQ&oe=66C3D6E1"
+						src="/project/res/activiries imgs/2024 imgs/img05.jpg"
 						alt="image.png"
 						title="Les Urgences Estivales" />
 					<img
-						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/452428844_7795379247256896_2431075414975096403_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=833d8c&_nc_ohc=J3V8LVgvvwsQ7kNvgE9stv3&_nc_ht=scontent.ftun8-1.fna&oh=00_AYDazjVdrD27ayxqY2rbhohwgcj9xYdBImgqr3eR1m1Maw&oe=66C40946"
+						src="/project/res/activiries imgs/2024 imgs/img06.jpg"
 						alt="image.png"
 						title="Les Urgences Estivales" />
 					<img
-						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/452130082_7795386403922847_283036690816967960_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=833d8c&_nc_ohc=PZ1-7nAqBnoQ7kNvgHJj-sO&_nc_ht=scontent.ftun8-1.fna&oh=00_AYC4SQhK_6G1x34n-VtQ4O8IudwWfYmB40GEUSl8xzjT2Q&oe=66C4072B"
-						alt="image.png"
-						title="Les Urgences Estivales" />
-					<img
-						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/452428618_7795384357256385_5522469603550522440_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=833d8c&_nc_ohc=zh1gF7y5cboQ7kNvgGPMy7j&_nc_ht=scontent.ftun8-1.fna&oh=00_AYDgISCBVfktrYDkXsuPJX5RhvDcyzssSrJCLHSzqQH0-A&oe=66C3F697"
-						alt="image.png"
-						title="Les Urgences Estivales" />
-					<img
-						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/452374701_7795380977256723_2824777492951771476_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=833d8c&_nc_ohc=PQj3555IR-EQ7kNvgFCzB90&_nc_ht=scontent.ftun8-1.fna&oh=00_AYAa6cHFNlWoyYosv1_DS_XTVT4uX4m8i0F5qQUhzkdOug&oe=66C4080E"
-						alt="image.png"
-						title="Les Urgences Estivales" />
-					<img
-						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/452586279_7797707130357441_5414121708301892259_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=833d8c&_nc_ohc=5_UPAJ07dWsQ7kNvgHz8glE&_nc_ht=scontent.ftun8-1.fna&oh=00_AYBzDQ22on91Dbcj25l7vyYy_zh29aLrlbU2WA-ki1RDyg&oe=66C421C8"
-						alt="image.png"
-						title="Les Urgences Estivales" />
-					<img
-						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/452195231_7797707543690733_6975354325651616664_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=833d8c&_nc_ohc=Z5jVpYmFmYwQ7kNvgGzl4nY&_nc_ht=scontent.ftun8-1.fna&oh=00_AYAf4g-N2ZvRV-TRwcH4vuy8WRd6h-BCC3etFHi5YZVdGw&oe=66C3FD6F"
+						src="/project/res/activiries imgs/2024 imgs/img07.jpg"
 						alt="image.png"
 						title="Les Urgences Estivales" />
 				</figure>
@@ -246,40 +250,50 @@
 						السيدة إيناس التريكي <br />شكرا لكل المساهمين والداعمين ❤️
 					</p>
 					<img
-						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/417470005_699463539064651_8229841701537121483_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=75d36f&_nc_ohc=Zbqn1ZpGssEQ7kNvgH5G0FL&_nc_ht=scontent.ftun8-1.fna&oh=00_AYABKO0cByx5IFv33PRoTk-80zwKxK46IURzhz6Hc12tuA&oe=66C275F9"
-						alt="" />
+						src="/project/res/activiries imgs/2024 imgs/head00.jpg"
+						alt="image.png" />
 				</header>
 
 				<hr />
 
 				<figure>
 					<img
-						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/432489165_703272908683714_6205666896027611181_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=833d8c&_nc_ohc=m1wkkHttAl0Q7kNvgGyubYI&_nc_ht=scontent.ftun8-1.fna&oh=00_AYAKNXlnCYYXA0zRcuaQgWnxeoTWXQPjWtNZLXdL7IRVCw&oe=66C28874"
+						src="/project/res/activiries imgs/2024 imgs/417519560_703274615350210_7392305218130287485_n.jpg"
 						alt="image.png"
 						title="صحتك بخير في شهر الخير" />
+
 					<img
-						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/432634309_703273528683652_1749460911313071384_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=833d8c&_nc_ohc=dx337WzYE60Q7kNvgF4Y2JX&_nc_ht=scontent.ftun8-1.fna&oh=00_AYCyWS4pbegly3Iw06SXNfvT_sg8_ppT8Jxn7eOrhYmBLg&oe=66C28872"
+						src="/project/res/activiries imgs/2024 imgs/431269352_703274298683575_5706469601760754988_n.jpg"
 						alt="image.png"
 						title="صحتك بخير في شهر الخير" />
+
 					<img
-						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/431269352_703274298683575_5706469601760754988_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=833d8c&_nc_ohc=yPR7jUYdJTUQ7kNvgEi7kJQ&_nc_ht=scontent.ftun8-1.fna&oh=00_AYArOs6_j4k5uO4oJbb-74cR_ttgK-3bhcGzaBZEloJPcQ&oe=66C28708"
+						src="/project/res/activiries imgs/2024 imgs/432484346_703274985350173_6673479155222896213_n.jpg"
 						alt="image.png"
 						title="صحتك بخير في شهر الخير" />
+
 					<img
-						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/431266867_703274392016899_5371117755035505779_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_ohc=6dPUVUZRFCgQ7kNvgEOlVHq&_nc_ht=scontent.ftun8-1.fna&oh=00_AYBQcboqiuoy6KMPhF6LTn885CqyuLmmvmaJA0JSfaoUQw&oe=66C28217"
+						src="/project/res/activiries imgs/2024 imgs/432489165_703272908683714_6205666896027611181_n.jpg"
 						alt="image.png"
 						title="صحتك بخير في شهر الخير" />
+
 					<img
-						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/432492085_703274452016893_4615144059207316311_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=833d8c&_nc_ohc=lTJ-Rvh2nLUQ7kNvgFJpOiP&_nc_ht=scontent.ftun8-1.fna&oh=00_AYAc_KZbJfoHl_yTm0pvvt8WmuAGMf0J5hicKIRZtTyDmA&oe=66C2A5FA"
+						src="/project/res/activiries imgs/2024 imgs/432492085_703274452016893_4615144059207316311_n.jpg"
 						alt="image.png"
-						title="صحتك بخير في شهر الخير" /><img
-						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/432484346_703274985350173_6673479155222896213_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=833d8c&_nc_ohc=VxNNsESrK7sQ7kNvgF3_qGC&_nc_ht=scontent.ftun8-1.fna&oh=00_AYAEx8IPAwB0Z3-ir4vhYKW_ucRXEtBlPpbmQHgzijpmtg&oe=66C2A3F6"
+						title="صحتك بخير في شهر الخير" />
+
+					<img
+						src="/project/res/activiries imgs/2024 imgs/432519269_703273995350272_845873879217220146_n.jpg"
 						alt="image.png"
-						title="صحتك بخير في شهر الخير" /><img
-						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/432519269_703273995350272_845873879217220146_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=833d8c&_nc_ohc=1MuacJBGZhUQ7kNvgHuuFlV&_nc_ht=scontent.ftun8-1.fna&oh=00_AYAs3CcpXaJqCOvrQhK5skYVmBPajhMoamIPzHq1Il5jyA&oe=66C27E2A"
+						title="صحتك بخير في شهر الخير" />
+
+					<img
+						src="/project/res/activiries imgs/2024 imgs/432556999_703273945350277_7540069763196517399_n.jpg"
 						alt="image.png"
-						title="صحتك بخير في شهر الخير" /><img
-						src="https://scontent.ftun8-1.fna.fbcdn.net/v/t39.30808-6/432556999_703273945350277_7540069763196517399_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=833d8c&_nc_ohc=7lfjEw-qPAEQ7kNvgET0dj6&_nc_ht=scontent.ftun8-1.fna&oh=00_AYDroThskYkq-CCl43r6zTZs6nlIOFaEFFAQ1jUzAECxbg&oe=66C2936F"
+						title="صحتك بخير في شهر الخير" />
+
+					<img
+						src="/project/res/activiries imgs/2024 imgs/432634309_703273528683652_1749460911313071384_n.jpg"
 						alt="image.png"
 						title="صحتك بخير في شهر الخير" />
 				</figure>
