--- a/project/html/index.html
+++ b/project/html/index.html
@@ -107,18 +107,6 @@
 
 		<!-- Header part: start -->
 		<header class="h__sec">
-			<div class="ADs">
-				<a href="https://www.laboratoires-thea.com/">
-					<img
-						src="/project/res/ADS imgs/thea.gif"
-						title="Laboratoires Thea"
-						alt="AD" />
-				</a>
-				<a href="https://www.unimed.com.tn/en">
-					<img src="/project/res/ADS imgs/Unimed AD.gif" alt="AD" />
-				</a>
-			</div>
-
 			<div class="mn_slider">
 				<div class="mn_slides">
 					<div class="mn_slide mn_active">
@@ -131,19 +119,14 @@
 					</div>
 					<div class="mn_slide">
 						<img
-							src="/project/res/activiries imgs/2021 imgs/image copy 3.png"
-							alt="AD" />
+							src="/project/res/slider imgs/h0.jpeg"
+							alt="image.png" />
 					</div>
 					<!-- Add more slides as needed -->
 					<div class="mn_slide">
 						<img
-							src="/project/res/activiries imgs/2021 imgs/image copy 3.png"
-							alt="AD" />
-					</div>
-					<div class="mn_slide">
-						<img
-							src="/project/res/activiries imgs/2021 imgs/image copy 3.png"
-							alt="AD" />
+							src="/project/res/slider imgs/h1.jpeg"
+							alt="image.png" />
 					</div>
 				</div>
 
@@ -162,6 +145,11 @@
 				<a href="https://www.sanofi.com/en">
 					<img
 						src="/project/res/ADS imgs/ezgif.com-animated-gif-maker.gif"
+						alt="AD" />
+				</a>
+				<a href="https://www.sanofi.com/en">
+					<img
+						src="/project/res/ADS imgs/thea.gif"
 						alt="AD" />
 				</a>
 			</div>
